--- a/chat_Application/package.json
+++ b/chat_Application/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "emoji-picker-react": "^4.7.12",
     "mdb-react-ui-kit": "^7.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
