--- a/chat_Application/package.json
+++ b/chat_Application/package.json
@@ -20,13 +20,16 @@
     "emoji-picker-react": "^4.7.12",
     "formik": "^2.4.5",
     "mdb-react-ui-kit": "^7.1.0",
+    "moment": "^2.30.1",
+    "nanoid": "^5.0.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.0",
+    "react-router-dom": "^6.22.2",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "socket.io-client": "^4.7.4",
     "yup": "^1.3.3"
   },
