--- a/chat_Application/package.json
+++ b/chat_Application/package.json
@@ -28,9 +28,11 @@
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
+    "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.7.4",
+    "toast": "^0.5.4",
     "yup": "^1.3.3"
   },
   "devDependencies": {
