--- a/chat_Application/package.json
+++ b/chat_Application/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "emoji-mart": "^5.5.2",
     "emoji-picker-react": "^4.7.12",
     "formik": "^2.4.5",
     "mdb-react-ui-kit": "^7.1.0",
